--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -209,8 +209,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('tasks.index') }}">
-                            <i class="fas fa-tasks me-1"></i>任务管理
+                        <a class="nav-link" href="{{ url_for('scheduler.index') }}">
+                            <i class="fas fa-clock me-1"></i>定时任务
                         </a>
                     </li>
                     <li class="nav-item">
