--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -309,6 +309,11 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
+    <!-- 权限查看组件 -->
+    <script src="{{ url_for('static', filename='js/common/permission-viewer.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/common/permission-modal.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/components/permission-button.js') }}"></script>
+    
     <!-- 动态加载应用信息 -->
     <script>
         // 加载应用信息
